# scorm-content-validator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/scorm_validator/: __init__.py  cli.py  fixers.py  manifest_parser.py  models.py  validator.py
src/scorm_validator/checks/: __init__.py  manifest.py  metadata.py  resources.py  sco.py  structure.py
tests/: conftest.py  test_manifest_parser.py  test_resource_checks.py  test_sco_checks.py  test_structure_checks.py  test_validator.py
