[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorm-validate"
version = "0.1.0"
description = "CLI tool to validate SCORM 1.2 and 2004 e-learning packages against the specification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pranav Shastri" }]
dependencies = [
    "click>=8.1",
    "lxml>=5.0",
    "pydantic>=2.5",
    "rich>=13.0",
]

[project.scripts]
scorm-validate = "scorm_validator.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/scorm_validator"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
